--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block title %} 
-    About Page 
+    Post Lists Page 
 
 {% endblock %}
 
 
 {% block content %}
-    <h1> Welcome to the About page! </h1>
+    <h1> Welcome to the Posts page! </h1>
     <p> Check out my <a href="/">Home page </a></p>
 {% endblock %}
