--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -6,6 +6,15 @@
 
 
 {% block content %}
-    <h1> Welcome to the Posts page! </h1>
-    <p> Check out my <a href="/">Home page </a></p>
+    <section>
+        <h1> Welcome to the Posts page! </h1>
+        {% for post in posts %}
+            <article class="post">   
+                <h2> {{ post.title }} </h2>
+                <p> {{ post.body|linebreaks }} </p>
+                <p> Published on: {{ post.date }} </p>
+            </article>
+        {% endfor%}
+    </section>
+
 {% endblock %}
