--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,13 +13,19 @@
 
     </title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <script src="{% static 'js/main.js' %}"defer></script>
+    <script src="{% static 'js/main.js' %}" defer></script>
 </head>
 <body>
     <nav>
-        <a href="/">🏠</a> | 
-        <a href="/about/">😊</a> | 
-        <a href="/posts/">📁</a>
+        <a href="/">
+            <span role="img" aria-label="Home">🏠</span>
+        </a> | 
+        <a href="/about/">
+            <span role="img" aria-label="About">😊</span>
+        </a> | 
+        <a href="{% url 'posts:list' %}">
+            <span role="img" aria-label="Posts">📁</span>
+        </a>
 
     </nav>
     <main>
