--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,15 +18,27 @@
 <body>
     <nav>
         <a href="/">
-            <span role="img" aria-label="Home">🏠</span>
+            <span role="img" aria-label="Home" title ="Home">🏠</span>
         </a> | 
         <a href="/about/">
-            <span role="img" aria-label="About">😊</span>
+            <span role="img" aria-label="About"  title ="About">😊</span>
         </a> | 
         <a href="{% url 'posts:list' %}">
-            <span role="img" aria-label="Posts">📁</span>
-        </a>
-
+            <span role="img" aria-label="Posts"  title ="Posts">📁</span>
+        </a>|
+        <a href="{% url 'users:user_register' %}">
+            <span role="img" aria-label="Users"  title ="Users Registration">⏰</span>
+        </a>|
+        <a href="{% url 'users:login' %}">
+            <span role="img" aria-label="Users"  title ="Users login">🙀</span>
+        </a>|
+        <a href="{% url 'posts:new-post' %}">
+            <span role="img" aria-label="Users"  title ="New Post">🆕</span>
+        </a>|
+        <form class="logout" action="{% url 'users:logout' %}" method="post" >
+            {% csrf_token %}
+            <button type="submit" style="logout-button" aria-label="Logout" title ="Logout">🤷</button>
+        </form>
     </nav>
     <main>
         {% block content %}
